add_stats for players

--- a/github_repo/project_python_main/project python/flask_app/templates/players_dashboard.html
+++ b/github_repo/project_python_main/project python/flask_app/templates/players_dashboard.html
@@ -51,5 +51,10 @@
       </tr>
       {% endfor %}
     </table>
+
+    <p>
+      TEST
+      <a href="create_player">create player</a>
+    </p>
   </body>
 </html>
