--- a/github_repo/project_python_main/project python/flask_app/templates/create_player.html
+++ b/github_repo/project_python_main/project python/flask_app/templates/create_player.html
@@ -15,48 +15,56 @@
     <h1 class="display-1">New Player Details</h1>
     <p><i> Input the following stats</i></p>
     <form
-      action="/players/{player.id}/add_stats"
+      action="/players/4/add_stats"
+      method="post"
       class="d-flex flex-column gap-3 border border-dark border-2 p-3 rounded w-25"
     >
       <div class="mb-3">
         <label for="birthdate" class="form-label"
-          >Birthday: <input type="date" id="birthdate" class="form-control"
+          >Birthday:
+          <input
+            type="date"
+            id="birthdate"
+            class="form-control"
+            name="birthdate"
         /></label>
       </div>
       <div class="mb-3">
         <label for="weight" class="form-label">Weight:</label>
-        <input type="number" id="weight" class="form-control" />
+        <input type="number" id="weight" name="weight" class="form-control" />
         <label for="weight" class="form-label">kg</label>
       </div>
       <div class="mb-3">
         <label for="height" class="form-label"
           >Height:
-          <input type="number" id="height" class="form-control" /> cm</label
+          <input type="number" id="height" name="height" class="form-control" />
+          cm</label
         >
       </div>
       <div>
         <label for="">Select Position in Field:</label>
-        <select class="form-select" size="4">
+        <select class="form-select" size="4" name="position">
           <option selected>Position</option>
-          <option value="1">
+          <option value="Forward">
             <p><abbr title="Forward">F</abbr></p>
           </option>
-          <option value="2">
+          <option value="Defense">
             <p><abbr title="Defense">D</abbr></p>
           </option>
-          <option value="3">
+          <option value="Goalkeeper">
             <p><abbr title="Goalkeeper">GK</abbr></p>
           </option>
         </select>
       </div>
       <div>
         <label for="">Select Preffered Foot</label>
-        <select class="form-select">
+        <select class="form-select" name="foot">
           <option selected>Preffered Foot</option>
           <option value="left">Left</option>
           <option value="right">Right</option>
         </select>
       </div>
+      <input type="submit" value="submit" />
     </form>
 
     <a href="/players/">Apply for Test</a>
