--- a/github_repo/project_python_main/project python/flask_app/templates/scouts_dashboard.html
+++ b/github_repo/project_python_main/project python/flask_app/templates/scouts_dashboard.html
@@ -16,7 +16,7 @@
 
   <body class="container">
     <h1>SCOUTS</h1>
-    <a href="/logout" class="btn btn-danger">LOGOUT</a>
+    <a href="/scouts/logout" class="btn btn-danger">LOGOUT</a>
     <a href="/" class="btn btn-secondary">Go to offers</a>
 
     <div class="text">
